--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,23 +45,23 @@
     <Analyzer Include="/Applications/Unity/Hub/Editor/2022.3.17f1/Unity.app/Contents/Tools/Unity.SourceGenerators/Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets/_Scripts/InterectableObjects/InteractableLightHandler.cs" />
     <Compile Include="Assets/_Scripts/Player/PlayerJump.cs" />
     <Compile Include="Assets/_Scripts/GlobalInterfaces/ILightControl.cs" />
     <Compile Include="Assets/_Scripts/GlobalInterfaces/IJumpable.cs" />
+    <Compile Include="Assets/_Scripts/Player/PlayerRotatable.cs" />
+    <Compile Include="Assets/_Scripts/RotatableObjects/RotatableObject.cs" />
+    <Compile Include="Assets/_Scripts/GlobalInterfaces/IInteractable.cs" />
+    <Compile Include="Assets/_Scripts/InterectableObjects/InteractableLightHandler.cs" />
     <Compile Include="Assets/_Scripts/Singleton/Singleton.cs" />
     <Compile Include="Assets/_Scripts/GlobalInterfaces/IRotatable.cs" />
     <Compile Include="Assets/_Scripts/GlobalInterfaces/IMovable.cs" />
-    <Compile Include="Assets/_Scripts/Player/PlayerRotatable.cs" />
     <Compile Include="Assets/_Scripts/UnityExtensions/UnityExtensions.cs" />
     <Compile Include="Assets/_Scripts/InterectableObjects/InteractableObject.cs" />
     <Compile Include="Assets/_Scripts/Player/PlayerInteractable.cs" />
     <Compile Include="Assets/_Scripts/Player/PlayerController.cs" />
     <Compile Include="Assets/_Scripts/Player/PlayerMovement.cs" />
-    <Compile Include="Assets/_Scripts/RotatableObjects/RotatableObject.cs" />
     <Compile Include="Assets/_Scripts/Player/PlayerInputHandler.cs" />
     <Compile Include="Assets/_Scripts/RotatableObjects/RotatableByInputs.cs" />
-    <Compile Include="Assets/_Scripts/GlobalInterfaces/IInteractable.cs" />
     <Reference Include="UnityEngine">
       <HintPath>/Applications/Unity/Hub/Editor/2022.3.17f1/Unity.app/Contents/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
@@ -312,31 +312,31 @@
       <HintPath>/Applications/Unity/Hub/Editor/2022.3.17f1/Unity.app/Contents/Managed/UnityEngine/UnityEditor.UnityConnectModule.dll</HintPath>
     </Reference>
     <Reference Include="Sirenix.Reflection.Editor">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Assets/Plugins/Sirenix/Assemblies/Sirenix.Reflection.Editor.dll</HintPath>
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Assets/Plugins/Sirenix/Assemblies/Sirenix.Reflection.Editor.dll</HintPath>
     </Reference>
     <Reference Include="ReportGeneratorMerged">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/PackageCache/com.unity.testtools.codecoverage@1.2.4/lib/ReportGenerator/ReportGeneratorMerged.dll</HintPath>
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/PackageCache/com.unity.testtools.codecoverage@1.2.4/lib/ReportGenerator/ReportGeneratorMerged.dll</HintPath>
     </Reference>
     <Reference Include="Sirenix.Serialization">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Assets/Plugins/Sirenix/Assemblies/Sirenix.Serialization.dll</HintPath>
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Assets/Plugins/Sirenix/Assemblies/Sirenix.Serialization.dll</HintPath>
     </Reference>
     <Reference Include="Sirenix.Serialization.Config">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Assets/Plugins/Sirenix/Assemblies/Sirenix.Serialization.Config.dll</HintPath>
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Assets/Plugins/Sirenix/Assemblies/Sirenix.Serialization.Config.dll</HintPath>
     </Reference>
     <Reference Include="Sirenix.OdinInspector.Editor">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Assets/Plugins/Sirenix/Assemblies/Sirenix.OdinInspector.Editor.dll</HintPath>
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Assets/Plugins/Sirenix/Assemblies/Sirenix.OdinInspector.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Sirenix.OdinInspector.Attributes">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Assets/Plugins/Sirenix/Assemblies/Sirenix.OdinInspector.Attributes.dll</HintPath>
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Assets/Plugins/Sirenix/Assemblies/Sirenix.OdinInspector.Attributes.dll</HintPath>
     </Reference>
     <Reference Include="Sirenix.Utilities">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Assets/Plugins/Sirenix/Assemblies/Sirenix.Utilities.dll</HintPath>
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Assets/Plugins/Sirenix/Assemblies/Sirenix.Utilities.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Antlr3.Runtime">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/PackageCache/com.unity.visualscripting@1.9.1/Runtime/VisualScripting.Flow/Dependencies/NCalc/Unity.VisualScripting.Antlr3.Runtime.dll</HintPath>
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/PackageCache/com.unity.visualscripting@1.9.1/Runtime/VisualScripting.Flow/Dependencies/NCalc/Unity.VisualScripting.Antlr3.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Sirenix.Utilities.Editor">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Assets/Plugins/Sirenix/Assemblies/Sirenix.Utilities.Editor.dll</HintPath>
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Assets/Plugins/Sirenix/Assemblies/Sirenix.Utilities.Editor.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>/Applications/Unity/Hub/Editor/2022.3.17f1/Unity.app/Contents/NetStandard/ref/2.1.0/netstandard.dll</HintPath>
@@ -704,83 +704,132 @@
     <Reference Include="mscorlib">
       <HintPath>/Applications/Unity/Hub/Editor/2022.3.17f1/Unity.app/Contents/NetStandard/compat/2.1.0/shims/netfx/mscorlib.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.Timeline">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.InputSystem">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/Unity.InputSystem.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.InputSystem.ForUI">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/Unity.InputSystem.ForUI.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.TestTools.CodeCoverage.Editor.OpenCover.Mono.Reflection">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/Unity.TestTools.CodeCoverage.Editor.OpenCover.Mono.Reflection.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.UI">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
+    <Reference Include="Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.dll</HintPath>
     </Reference>
     <Reference Include="Unity.EditorCoroutines.Editor">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/Unity.EditorCoroutines.Editor.dll</HintPath>
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.EditorCoroutines.Editor.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.VisualScripting.SettingsProvider.Editor">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/Unity.VisualScripting.SettingsProvider.Editor.dll</HintPath>
+    <Reference Include="Unity.VisualEffectGraph.Runtime">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.VisualEffectGraph.Runtime.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.Performance.Profile-Analyzer.Editor">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/Unity.Performance.Profile-Analyzer.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.TestTools.CodeCoverage.Editor">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/Unity.TestTools.CodeCoverage.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.TestTools.CodeCoverage.Editor.OpenCover.Model">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/Unity.TestTools.CodeCoverage.Editor.OpenCover.Model.dll</HintPath>
+    <Reference Include="Unity.RenderPipelines.Core.Runtime">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.PlasticSCM.Editor">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/Unity.PlasticSCM.Editor.dll</HintPath>
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.PlasticSCM.Editor.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.VisualScripting.State.Editor">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/Unity.VisualScripting.State.Editor.dll</HintPath>
+    <Reference Include="Unity.Burst">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.Burst.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Burst.Editor">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.Burst.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline.Editor">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Shared.Editor">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/Unity.VisualScripting.Shared.Editor.dll</HintPath>
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.VisualScripting.Shared.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.ShaderGraph.Editor">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.ShaderGraph.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualStudio.Editor">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/Unity.VisualStudio.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.TextMeshPro">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.VisualScripting.Core">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/Unity.VisualScripting.Core.dll</HintPath>
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.VisualStudio.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.VisualScripting.Core">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.VisualScripting.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Core.Editor">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/Unity.VisualScripting.Core.Editor.dll</HintPath>
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.VisualScripting.Core.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Rider.Editor">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.VisualScripting.State">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/Unity.VisualScripting.State.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.VSCode.Editor">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
+    <Reference Include="Unity.RenderPipelines.Core.Editor">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Flow">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/Unity.VisualScripting.Flow.dll</HintPath>
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.VisualScripting.Flow.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Flow.Editor">
-      <HintPath>/Volumes/MAC-SSD-1 1/DSW/ShooterDSW/Library/ScriptAssemblies/Unity.VisualScripting.Flow.Editor.dll</HintPath>
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.VisualScripting.Flow.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Mathematics.Editor">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.Mathematics.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.VisualEffectGraph.Editor">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.VisualEffectGraph.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Timeline">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.InputSystem">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.InputSystem.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.InputSystem.ForUI">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.InputSystem.ForUI.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.TestTools.CodeCoverage.Editor.OpenCover.Mono.Reflection">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.TestTools.CodeCoverage.Editor.OpenCover.Mono.Reflection.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.VisualScripting.SettingsProvider.Editor">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.VisualScripting.SettingsProvider.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.RenderPipelines.HighDefinition.Config.Runtime">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.RenderPipelines.HighDefinition.Config.Runtime.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Performance.Profile-Analyzer.Editor">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.Performance.Profile-Analyzer.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.TestTools.CodeCoverage.Editor">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.TestTools.CodeCoverage.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.TestTools.CodeCoverage.Editor.OpenCover.Model">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.TestTools.CodeCoverage.Editor.OpenCover.Model.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.RenderPipelines.Core.ShaderLibrary">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.RenderPipelines.Core.ShaderLibrary.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.VisualScripting.State.Editor">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.VisualScripting.State.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Mathematics">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.Mathematics.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.TextMeshPro">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.TextMeshPro.Editor">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Searcher.Editor">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.Searcher.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.VisualScripting.State">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.VisualScripting.State.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.VSCode.Editor">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.RenderPipelines.HighDefinition.Runtime">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.RenderPipelines.HighDefinition.Runtime.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.RenderPipelines.HighDefinition.Editor">
+      <HintPath>/Volumes/MAC-SSD-1 1/GIT2/ShooterDSW/Library/ScriptAssemblies/Unity.RenderPipelines.HighDefinition.Editor.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="Sirenix.OdinInspector.Modules.UnityMathematics.csproj">
+      <Project>{b7d247f4-3136-ccf3-34b4-a1ca5a521de8}</Project>
+      <Name>Sirenix.OdinInspector.Modules.UnityMathematics</Name>
+    </ProjectReference>
     <ProjectReference Include="VFolders.csproj">
       <Project>{69f5323b-0fd7-048d-a87c-906625e747ff}</Project>
       <Name>VFolders</Name>
